Small minor tweaks such as wording, fixed links to work for overview tab, and pharagraph spacing so all tabs have the same look

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ section:first-of-type {
     padding: 40px;
     max-width: 700px;
     margin: 40px auto;
-    background-color: #878383;
+    background-color: #f7f7f7;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
